--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,13 @@ padding: 0px!important;
 .menu-principal
 {
 width: 100%;
-background-color: #ffffff;
-height: 60px;
+background-color: #ea599c;
+height: 80px;
 }
 main
 {
 margin: 0 auto;
-width: 980px; 
+width: 980px;
 position: relative;
 }
 .logo
@@ -58,7 +58,7 @@ margin-left: 15px;
 }
 .menu ul li a
 {
-color: rgb(255, 255, 255);
+color: #ffffff;
 text-decoration: none; /*Retirar a formatação padrão*/
 font-size: 18px;
 text-transform: uppercase; /*letra maiúscula*/
@@ -83,3 +83,4 @@ width: 100%;
 float: left;
 position: relative;
 }
+/* PARTE DA GRID DO SITE */
