--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ padding: 0px!important;
 .menu-principal
 {
 width: 100%;
-background-color: #ea599c;
+background-color: #ffffff;
 height: 80px;
 }
 main
@@ -78,7 +78,7 @@ text-transform: uppercase; /*letra maiúscula*/
  }
  .col-100
 {
-background-color: rgb(231, 82, 82);
+background-color: #e20612;
 width: 100%;
 float: left;
 position: relative;
